--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "rolldown -c"
+  },
   "dependencies": {
     "curve25519-js": "^0.0.4",
     "protobufjs": "6.8.8"
   },
   "files": [
     "src/*"
-  ]
+  ],
+  "devDependencies": {
+    "rolldown": "1.0.0-beta.52"
+  }
 }
